fix message container height on mobile so c

--- a/src/styles.css
+++ b/src/styles.css
@@ -379,6 +379,9 @@ button {
 }
 
 @media screen and (max-width: 960px) {
+  .sendbird-conversation__messages .sendbird-conversation__messages-padding {
+    height: 100%!important;
+  }
   .uikit-container {
     visibility: hidden;
     width: 100%;
